tests/ui/feature-gates/feature-gate-rustc-allow-const-fn-unstable.stderr
error[E0658]: rustc_allow_const_fn_unstable side-steps feature gating and stability checks
  --> $DIR/feature-gate-rustc-allow-const-fn-unstable.rs:3:1
   |
LL | #[rustc_allow_const_fn_unstable()]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #69399 <https://github.com/rust-lang/rust/issues/69399> for more information
   = help: add `#![feature(rustc_allow_const_fn_unstable)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
