tests/ui/feature-gates/feature-gate-rustc-allow-const-fn-unstable.rs
#![allow(unused_macros)]

#[rustc_allow_const_fn_unstable()] //~ ERROR rustc_allow_const_fn_unstable side-steps
const fn foo() { }

fn main() {}
